--- a/index.html
+++ b/index.html
@@ -62,14 +62,11 @@
     <header></header>
     <div class="navbar">
       <a href="https://serainox420.github.io/about">ABOUT</a>
-      <a href="https://serainox420.github.io/szmelc">SZMELC</a>
+      <a href="https://serainox420.github.io/fancy">FANCY</a>
+      <a href="https://serainox420.github.io/more">MORE</a>
+      <a href="https://github.com/serainox420">GITHUB</a>
       <a href="https://discord.gg/y9h7FjVsX6">DISCORD</a>
     </div>
-    <main>
-      <div class="sample-text">
-        <p id="text">Sample Text</p>
-      </div>
-    </main>
     <footer>
       <p>&copy; 2023 Szmelc Incorporated</p>
     </footer>
