--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         color: #fff;
         padding: 10px;
         text-align: center;
-        font-size: 69px;
+        font-size: 20px;
       }
       .navbar {
         background-color: #333;
@@ -62,11 +62,10 @@
   <body>
     <header></header>
     <div class="navbar">
-      <a href="https://serainox420.github.io/about">ABOUT</a>
-      <a href="https://serainox420.github.io/fancy">FANCY</a>
-      <a href="https://serainox420.github.io/more">MORE</a>
-      <a href="https://github.com/serainox420">GITHUB</a>
-      <a href="https://discord.gg/y9h7FjVsX6">DISCORD</a>
+      <a href="https://serainox420.github.io/about">[ABOUT]</a>
+      <a href="https://serainox420.github.io/projects">[MY PROJECTS]</a>
+      <a href="https://github.com/serainox420">[GITHUB]</a>
+      <a href="https://discord.gg/y9h7FjVsX6">[DISCORD]</a>
     </div>
     <footer>
       <p>&copy; 2023 Szmelc Incorporated</p>
