--- a/about.html
+++ b/about.html
@@ -23,14 +23,15 @@
       footer {
         background-color: #000;
         color: #fff;
-        padding: 10px;
+        padding: 1px;
         text-align: center;
       }
       .navbar {
-        background-color: #333;
+        background-color: #171717;
         overflow: hidden;
         display: flex;
         justify-content: center;
+        padding: 14px 16px;
       }
       .navbar a {
         float: left;
@@ -39,7 +40,7 @@
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
-        font-size: 17px;
+        font-size: 35px;
       }
       .navbar a:hover {
         background-color: #ddd;
@@ -50,9 +51,12 @@
         color: white;
       }
       .sample-text {
-        background-color: #000;
+        background-color: #171717;
         color: #fff;
-        padding: 20px;
+        padding: 1px;
+        font-size: 35px;
+        text-align: center;
+        display: block;
       }
     </style>
   </head>
@@ -61,15 +65,26 @@
       <p>[ ABOUT ]</p>
     </div>
     <div class="navbar">
-      <a href="https://serainox420.github.io">MAIN</a>
-      <a href="https://serainox420.github.io/about">ABOUT</a>
-      <a href="https://serainox420.github.io/szmelc">SZMELC</a>
-      <a href="https://discord.gg/y9h7FjVsX6">DISCORD</a>
+      <a href="https://www.google.com">[MAIN]</a>
+      <a href="https://www.google.com">[DISCORD]</a>
     </div>
     <main>
       <div class="sample-text">
         <p>Sample Text</p>
       </div>
+          <div class="navbar">
+      <a href="https://www.google.com">[SILVER]</a>
+      <a href="https://www.google.com">[SZMELC.INC]</a>
+    </div>
+    </main>
+    <main>
+    <div class="sample-text">
+        <p>Sample Text</p>
+      </div>
+          <div class="navbar">
+      <a href="https://www.google.com">[SILVER]</a>
+      <a href="https://www.google.com">[SZMELC.INC]</a>
+    </div>
     </main>
     <footer>
       <p>&copy; 2023 Szmelc Incorporated</p>
