--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
         color: #fff;
         padding: 1px;
         text-align: center;
+        font-weight: bold;
       }
       .navbar {
         background-color: #171717;
@@ -32,6 +33,7 @@
         display: flex;
         justify-content: center;
         padding: 14px 16px;
+        font-weight: bold;
       }
       .navbar a {
         float: left;
