--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         font-family: Arial, sans-serif;
       }
       header {
-        background-image: url("https://i.imgur.com/UymdGkB.png");
+        background-image: url("https://i.imgur.com/bSHc8F0.png");
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
         text-align: center;
-        height: 333px;
+        height: 256px;
       }
       main {
         padding: 20px;
@@ -27,12 +27,14 @@
         color: #fff;
         padding: 10px;
         text-align: center;
+        font-weight: bold;
         font-size: 20px;
       }
       .navbar {
         background-color: #333;
         overflow: hidden;
         display: flex;
+        font-weight: bold;
         justify-content: center;
       }
       .navbar a {
@@ -62,10 +64,13 @@
   <body>
     <header></header>
     <div class="navbar">
-      <a href="https://serainox420.github.io/about">[ABOUT]</a>
-      <a href="https://serainox420.github.io/projects">[MY PROJECTS]</a>
+      <a href="https://serainox420.github.io/about">[ ABOUT ]</a>
+      <a href="https://serainox420.github.io/projects">[ MY PROJECTS ]</a>
+      </div>
+      <div class="navbar">
       <a href="https://github.com/serainox420">[GITHUB]</a>
       <a href="https://discord.gg/y9h7FjVsX6">[DISCORD]</a>
+      <a href="https://linktr.ee/silverainox">[LINKTR.EE]</a>
     </div>
     <footer>
       <p>&copy; 2023 Szmelc Incorporated</p>
