--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <footer>
       <p>&copy; 2023 Szmelc Incorporated</p>
     </footer>
+    <audio src="audio/test.mp3" loop="true" autostart="true" controls></audio>
     <script>
       setInterval(() => {
         const elements = document.querySelectorAll("*");
