--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
         color: #fff;
         padding: 0px;
       }
+      audio {
+        display: flex;
+        margin: auto;
+        color: #333;
+        padding: 5px;
+      }
     </style>
   </head>
   <body>
