--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  <iframe src="audio/test.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+</iframe>
   <head>
     <title>Szmelc.INC</title>
     <style>
@@ -81,7 +83,6 @@
     <footer>
       <p>&copy; 2023 Szmelc Incorporated</p>
     </footer>
-    <audio src="audio/test.mp3" loop="true" autostart="true" controls></audio>
     <script>
       setInterval(() => {
         const elements = document.querySelectorAll("*");
