--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
       <a href="https://linktr.ee/silverainox">[LINKTR.EE]</a>
     </div>
     <footer>
-      <p>&copy; 2023 Szmelc Incorporated</p>
-      <audio src="audio/test.mp3" loop autoplay controls></audio>
+      <p>&copy; Szmelc Incorporated 2023</p>
     </footer>
+      <audio src="audio/test.mp3" loop autoplay controls></audio>
     <script>
       setInterval(() => {
         const elements = document.querySelectorAll("*");
