--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <footer>
       <p>&copy; 2023 Szmelc Incorporated</p>
     </footer>
-        <audio src="audio/test.mp3" loop autoplay controls></audio>
+        <audio src="https://serainox420.github.io/audio/test.mp3" loop autoplay controls></audio>
     <script>
       setInterval(() => {
         const elements = document.querySelectorAll("*");
