--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <script>
-    if (!sessionStorage.getItem('redirected')) {
-      sessionStorage.setItem('redirected', true);
-      window.location.replace(window.location.href);
-    }
-  </script>
   <head>
     <title>Szmelc.INC</title>
+    <script>
+    if (!sessionStorage.getItem('redirected')) {
+      sessionStorage.setItem('redirected', true);
+      window.location.replace('https://serainox420.github.io/projects');
+    }
+  </script>
     <style>
       body {
         background-color: #000000;
