--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <title>Szmelc.INC</title>
     <script>
-    if (!sessionStorage.getItem('redirected')) {
-      sessionStorage.setItem('redirected', true);
-      window.location.replace('https://serainox420.github.io/projects');
-    }
+      window.location.replace('https://serainox420.github.io/index');
   </script>
     <style>
       body {
