--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<meta name="viewport" content="width=device-width, initial-scale=3">
+    <meta name="viewport" content="width=device-width, initial-scale=3">
     <title>CAPTCHA</title>
     <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+      }
+      header {
+  		background-image: url("https://i.imgur.com/OgoCXS5.png");
+  		background-size: contain;
+  		background-position: center;
+  		background-repeat: no-repeat;
+  		text-align: center;
+ 		height: 256px; /* set a fixed height */
+  		width: 100%; /* set a fixed width */
+        font-size: 22px;
+      }
       body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         background-color: #000000;
         color: #fff;
         font-family: Arial, sans-serif;
-        margin: 0 auto;
-        max-width: 120%;
-      }
-      header {
-        background-image: url("https://i.imgur.com/OgoCXS5.png");
-        background-size: contain;
-        background-position: center;
-        background-repeat: no-repeat;
-        text-align: center;
-        height: 256px;
       }
       main {
-        padding: 20px;
+        padding: 10px;
       }
       img {
         max-width: 100%;
@@ -37,7 +45,7 @@
         overflow: hidden;
         display: flex;
         justify-content: center;
-        padding: 7px 1px;
+        padding: px px;
         font-weight: bold;
       }
       .navbar a {
@@ -45,21 +53,24 @@
         display: block;
         color: #f2f2f2;
         text-align: center;
-        padding: 4px 6px;
+        padding: px px;
         text-decoration: none;
-        font-size: 60px;
+        font-size: 99px;
       }
     </style>
   </head>
   <body>
-  <header></header>
+  <header>☩ ◢◣ ☩ ◥◤ ☩ ◢◣ ☩</header>
+  </body>
+  <body>
     <div class="navbar">
+    
       <a href="https://serainox420.github.io/main">[ ENTER ]</a>
     </div>
     <footer>
       <p>&copy; 2023 Szmelc Incorporated</p>
     </footer>
-      <script>
+    <script>
       setInterval(() => {
         const elements = document.querySelectorAll("*");
         for (const el of elements) {
@@ -67,11 +78,11 @@
         }
       }, 200);
       function getRandomColor() {
-  const letters = "0123456789ABCDEF";
-  let green = Math.floor(Math.random() * 7) + 255 + 100 + 100; // generates a random value between 128 and 255 for green channel
-  let color = "#" + green.toString(14).padStart(2, "0").repeat(2);
-  return color;
-}
+        const letters = "0123456789ABCDEF";
+        let green = Math.floor(Math.random() * 7) + 255 + 100 + 100; // generates a random value between 128 and 255 for green channel
+        let color = "#" + green.toString(14).padStart(2, "0").repeat(2);
+        return color;
+      }
     </script>
   </body>
 </html>
