--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=3">
+    <meta name="viewport" content="width=device-width, initial-scale=2">
     <title>CAPTCHA</title>
     <style>
       html, body {
@@ -53,9 +53,9 @@
         display: block;
         color: #f2f2f2;
         text-align: center;
-        padding: px px;
+        padding: 1px 1px;
         text-decoration: none;
-        font-size: 99px;
+        font-size: 69px;
       }
     </style>
   </head>
