--- a/main.html
+++ b/main.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Szmelc.INC</title>
+    <meta name="viewport" content="width=device-width, initial-scale=2">
+    <title>Main</title>
     <style>
+    html, body {
+        height: 100%;
+        margin: 0;
+      }
       body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         background-color: #000000;
         color: #fff;
         font-family: Arial, sans-serif;
@@ -14,7 +23,8 @@
         background-position: center;
         background-repeat: no-repeat;
         text-align: center;
-        height: 200px;
+        height: 256px;
+        width: 100%;
       }
       main {
         padding: 20px;
@@ -44,7 +54,7 @@
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
-        font-size: 35px;
+        font-size: 55px;
       }
       .navbar a:hover {
         background-color: #ddd;
@@ -61,7 +71,6 @@
       }
       audio {
         display: flex;
-        margin: auto;
         color: #333;
         padding: 5px;
       }
