--- a/main.html
+++ b/main.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=2">
-    <title>Main</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Szmelc.INC</title>
     <style>
     html, body {
         height: 100%;
@@ -54,7 +54,7 @@
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
-        font-size: 55px;
+        font-size: 35px;
       }
       .navbar a:hover {
         background-color: #ddd;
