--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Szmelc</title>
+    <title>Szmelcx</title>
     <style>
     html, body {
         height: 100%;
@@ -79,6 +79,13 @@
         padding: 5px;
         width: 100%;
         max-width: 600px;
+      }
+      /* Media query to adjust navbar style for mobile screens */
+      @media only screen and (max-width: 600px) {
+        .navbar a {
+          font-size: 25px;
+          padding: 8px;
+        }
       }
     </style>
   </head>
