--- a/main.html
+++ b/main.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -81,19 +80,18 @@
         max-width: 600px;
       }
       /* Media query to adjust navbar style for mobile screens */
-      @media only screen and (max-width: 600px) {
+      @media only screen and (max-width: 100%) {
         .navbar a {
-          font-size: 25px;
-          padding: 8px;
+          font-size: 15px;
+          padding: 0px;
         }
-      }
     </style>
   </head>
   <body>
     <header></header>
     <div class="navbar">
-      <a href="https://serainox420.github.io/about">[ ABOUT ]</a>
-      <a href="https://serainox420.github.io/projects">[ MY PROJECTS ]</a>
+      <a href="https://serainox420.github.io/about">[ABOUT]</a>
+      <a href="https://serainox420.github.io/projects">[MY PROJECTS]</a>
       </div>
     <div class="navbar">
       <a href="https://github.com/serainox420">[GITHUB]</a>
