--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Szmelcx</title>
+    <title>SzmelcZ</title>
     <style>
     html, body {
         height: 100%;
@@ -29,7 +29,7 @@
         padding: 20px;
         flex-grow: 1;
         width: 100%;
-        max-width: 666px;
+        max-width: 320;
       }
       img {
         max-width: 100%;
@@ -37,25 +37,25 @@
       footer {
         background-color: #000;
         color: #fff;
-        padding: 10px;
+        padding: 1px;
         text-align: center;
         font-weight: bold;
         font-size: 20px;
       }
       .navbar {
-        background-color: #171717;
+        background-color: #00000;
         overflow: hidden;
-        display: fleX;
+        display: flex;
         justify-content: center;
-        padding: 14px 16px;
+        padding: 5px 5px;
         font-weight: bold;
       }
       .navbar a {
         float: left;
-        display: block;
+        display: flex;
         color: #f2f2f2;
         text-align: center;
-        padding: 14px 16px;
+        padding: 4px 6px;
         text-decoration: none;
         font-size: 35px;
       }
@@ -83,21 +83,25 @@
       @media only screen and (max-width: 100%) {
         .navbar a {
           font-size: 15px;
-          padding: 0px;
+          padding: 10px;
         }
     </style>
   </head>
   <body>
     <header></header>
+    <main>
     <div class="navbar">
       <a href="https://serainox420.github.io/about">[ABOUT]</a>
-      <a href="https://serainox420.github.io/projects">[MY PROJECTS]</a>
-      </div>
-    <div class="navbar">
+      </div><div class="navbar">
+      <a href="https://serainox420.github.io/projects">[MY PROJECTS</a>
+      </div><div class="navbar">
       <a href="https://github.com/serainox420">[GITHUB]</a>
+      </div><div class="navbar">
       <a href="https://discord.gg/y9h7FjVsX6">[DISCORD]</a>
+      </div><div class="navbar">
       <a href="https://linktr.ee/silverainox">[LINKTR.EE]</a>
     </div>
+    </main>
     <footer>
       <p>&copy; 2023 Szmelc Incorporated</p>
     </footer>
