--- a/main.html
+++ b/main.html
@@ -93,7 +93,7 @@
     <div class="navbar">
       <a href="https://serainox420.github.io/about">[ABOUT]</a>
       </div><div class="navbar">
-      <a href="https://serainox420.github.io/projects">[MY PROJECTS</a>
+      <a href="https://serainox420.github.io/projects">[MY PROJECTS]</a>
       </div><div class="navbar">
       <a href="https://github.com/serainox420">[GITHUB]</a>
       </div><div class="navbar">
