--- a/oof.html
+++ b/oof.html
@@ -9,13 +9,13 @@
 <script>
 $(document).ready(function(){
    $(document).snowfall({
-      flakeCount : 999999,
-      maxSpeed : 999999,
-      maxSize : 999999
+      flakeCount : 9999,
+      maxSpeed : 9999,
+      maxSize : 9999
    });
 });
 </script>
 <h1>OOF</h1>
-<p>crash.exe</p>
+<p>eee?</p>
 </body>
 </html>
