--- a/main.html
+++ b/main.html
@@ -1,7 +1,20 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SzmelcZ</title>
+    <title>Szmelc XYZ</title>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://serainox420.github.io/js/snowfall.js"></script>
+<script>
+$(document).ready(function(){
+   $(document).snowfall({
+      flakeCount : 200,
+      maxSpeed : 2,
+      maxSize : 5
+  });
+});
+</script>
+    
     <style>
     html, body {
         height: 100%;
