--- a/about.html
+++ b/about.html
@@ -2,6 +2,19 @@
 <html>
   <head>
     <title>ABOUT</title>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://serainox420.github.io/js/snowfall.js"></script>
+<script>
+$(document).ready(function(){
+   $(document).snowfall({
+      flakeCount : 200,
+      maxSpeed : 2,
+      maxSize : 5
+  });
+});
+</script>
+    
     <style>
       body {
         background-color: #000000;
