--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,7 @@ $(document).ready(function(){
       <p>[ MY PROJECTS ]</p>
     </div>
     <div class="navbar">
-      <a href="https://serainox420.github.io">[ MAIN ]</a>
+      <a href="https://serainox420.github.io/main">[ MAIN ]</a>
     </div>
     <main>
       <div class="sample-text">
