--- a/about.html
+++ b/about.html
@@ -80,8 +80,7 @@ $(document).ready(function(){
       <p>[ ABOUT ]</p>
     </div>
     <div class="navbar">
-      <a href="https://www.google.com">[MAIN]</a>
-      <a href="https://www.google.com">[DISCORD]</a>
+      <a href="https://serainox420.github.io/main">[MAIN]</a>
     </div>
     <main>
       <div class="sample-text">
