--- a/main.html
+++ b/main.html
@@ -108,6 +108,8 @@ $(document).ready(function(){
       </div><div class="navbar">
       <a href="https://serainox420.github.io/projects">[MY PROJECTS]</a>
       </div><div class="navbar">
+      <a href="https://serainox420.github.io/entertainment">[ENTERTAINMENT]</a>
+      </div><div class="navbar">
       <a href="https://github.com/serainox420">[GITHUB]</a>
       </div><div class="navbar">
       <a href="https://discord.gg/y9h7FjVsX6">[DISCORD]</a>
