--- a/fun/games.html
+++ b/fun/games.html
@@ -106,7 +106,7 @@ $(document).ready(function(){
     <div class="navbar">
       <a href="https://serainox420.github.io/fun/games/tetris">[TETRIS]</a>
       </div><div class="navbar">
-      <a href="https://serainox420.github.io/fun/games/2048">[2048]</a>
+      <a href="https://play2048.co">[2048]</a>
       </div><div class="navbar">
       <a href="https://serainox420.github.io/fun/games/runner">[RUNNER]</a>
       </div><div class="navbar">
