--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ $(document).ready(function(){
       body {
         background-color: #000000;
         color: #fff;
-        font-family: Arial, sans-serif;
+        font-family: Ancient, sans-serif;
       }
       .title {
         font-size: 48px;
