--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>ABOUT</title>
-    
+    <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://serainox420.github.io/js/snowfall.js"></script>
 <script>
@@ -39,6 +39,7 @@ $(document).ready(function(){
         padding: 1px;
         text-align: center;
         font-weight: bold;
+        font-family: Ancient;
       }
       .navbar {
         background-color: #171717;
