--- a/about.html
+++ b/about.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>ABOUT</title>
+    
     <link rel="stylesheet" href="styles.css">
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://serainox420.github.io/js/snowfall.js"></script>
 <script>
@@ -23,7 +25,6 @@ $(document).ready(function(){
       }
       .title {
         font-size: 48px;
-        font-weight: bold;
         text-align: center;
         padding-top: 0px;
       }
@@ -38,7 +39,6 @@ $(document).ready(function(){
         color: #fff;
         padding: 1px;
         text-align: center;
-        font-weight: bold;
         font-family: Ancient;
       }
       .navbar {
@@ -78,18 +78,18 @@ $(document).ready(function(){
   </head>
   <body>
     <div class="title">
-      <p>[ ABOUT ]</p>
+      <p> About </p>
     </div>
     <div class="navbar">
-      <a href="https://serainox420.github.io/main">[MAIN]</a>
+      <a href="https://serainox420.github.io/main">Main</a>
     </div>
     <main>
       <div class="sample-text">
         <p>Sample Text</p>
       </div>
           <div class="navbar">
-      <a href="https://www.google.com">[SILVER]</a>
-      <a href="https://www.google.com">[SZMELC.INC]</a>
+      <a href="https://www.google.com">SilverX</a>
+      <a href="https://www.google.com">Szmelc.Inc</a>
     </div>
     </main>
     <footer>
