--- a/main.html
+++ b/main.html
@@ -120,7 +120,7 @@ $(document).ready(function(){
     <footer>
       <p>&copy; 2023 Szmelc Incorporated</p>
     </footer>
-    <audio src="https://serainox420.github.io/audio/test1.mp3" loop autoplay controls></audio>
+    <audio src="https://serainox420.github.io/audio/test1.mp3" loop controls></audio>
      <script>
       setInterval(() => {
         const elements = document.querySelectorAll("*");
