--- a/fun/games.html
+++ b/fun/games.html
@@ -18,7 +18,7 @@ $(document).ready(function(){
     <style>
     html, body {
         height: 100%;
-        margin: 0;
+        margin: 69;
       }
       body {
         display: flex;
@@ -68,9 +68,9 @@ $(document).ready(function(){
         display: flex;
         color: #f2f2f2;
         text-align: center;
-        padding: 4px 6px;
+        padding: 2px 120px;
         text-decoration: none;
-        font-size: 45px;
+        font-size: 35px;
       }
       .navbar a:hover {
         background-color: #ddd;
@@ -108,13 +108,13 @@ $(document).ready(function(){
       </div><div class="navbar">
       <a href="https://play2048.co">[2048]</a>
       </div><div class="navbar">
-      <a href="https://serainox420.github.io/fun/games/runner">[RUNNER]</a>
+      <a href="https://serainox420.github.io/fun/games/mariorampage">[MARIO RAMPAGE]</a>
       </div><div class="navbar">
-      <a href="https://serainox420.github.io/fun/games/xo">[X/O]</a>
+      <a href="https://serainox420.github.io/fun/games/flappy">[FLAPPY SZMELC]</a>
       </div><div class="navbar">
-      <a href="serainox420.github.io/fun/games/shooter">[SHOOTER]</a>
+      <a href="serainox420.github.io/fun/games/shooter">[WORMS]</a>
       </div><div class="navbar">
-      <a href="serainox420.github.io/fun/games/paint">[PAINT]</a>
+      <a href="serainox420.github.io/fun/games/paint">[PUZZLE MULTIPLAYER]</a>
     </div>
     </main>
     <footer>
