--- a/fun/games/mariorampage.html
+++ b/fun/games/mariorampage.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Mario Rampage</title>
+<style>
+body {
+  background-color: black;
+}
+h1 {
+  color: green;
+  font-family: Ancient;
+  font-size: 50px;
+}
+@font-face {
+  font-family: Ancient;
+  src: url('https://serainox420.github.io/fonts/Ancient.ttf');
+}
+</style>
 </head>
 <body>
-<iframe src='https://www.miniplay.com/embed/super-mario-rampage' style='width:900px;height:600px;' frameborder='10' allowfullscreen></iframe>
+<h1>Szmelc.Inc - Mario Rampage - iframe</h1>
+<iframe src='https://www.miniplay.com/embed/super-mario-rampage' style='width:1000px;height:640px;' frameborder='10' allowfullscreen></iframe>
 </body>
 </html>
