--- a/fun/games/mariorampage.html
+++ b/fun/games/mariorampage.html
@@ -7,7 +7,7 @@
 body {
   background-color: black;
 }
-h1 {
+h {
   color: green;
   font-family: Ancient;
   font-size: 50px;
@@ -19,7 +19,9 @@ h1 {
 </style>
 </head>
 <body>
-<h1>Szmelc.Inc - Mario Rampage - iframe</h1>
+<h>Mario Rampage - iframe</h>
+<p></p>
 <iframe src='https://www.miniplay.com/embed/super-mario-rampage' style='width:1000px;height:640px;' frameborder='10' allowfullscreen></iframe>
+<h>Szmelc.Inc</h>
 </body>
 </html>
