--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Szmelc XYZ</title>
+    <title>Centrum Dowodzenia Wszechświatem</title>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://serainox420.github.io/js/snowfall.js"></script>
@@ -104,15 +104,15 @@ $(document).ready(function(){
     <header></header>
     <main>
     <div class="navbar">
-      <a href="https://serainox420.github.io/about">[ABOUT]</a>
+      <a href="https://serainox420.github.io/szmelcdb/szmelcdb">[SzmelcDB]</a>
       </div><div class="navbar">
-      <a href="https://serainox420.github.io/projects">[MY PROJECTS]</a>
+      <a href="https://github.com/GNU-Szmelc">[GitHub]</a>
       </div><div class="navbar">
-      <a href="https://serainox420.github.io/entertainment">[ENTERTAINMENT]</a>
+      <a href="https://serainox420.github.io/entertainment">[Fun / Games]</a>
       </div><div class="navbar">
-      <a href="https://github.com/serainox420">[GITHUB]</a>
+      <a href="https://discord.gg/y9h7FjVsX6">[Discord]</a>
       </div><div class="navbar">
-      <a href="https://discord.gg/y9h7FjVsX6">[DISCORD]</a>
+      <a href="https://github.com/serainox420">[???]</a>
       </div><div class="navbar">
       <a href="https://linktr.ee/silverainox">[LINKTR.EE]</a>
     </div>
