--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>[SZMELC]</title>
+    <meta name="description" content="Stuff and more!">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=2">
-    <title>CAPTCHA</title>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://serainox420.github.io/js/snowfall.js"></script>
