--- a/abuseme.html
+++ b/abuseme.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bruh</title>
-    <meta name="description" content="This is test">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=2">
+<title>Szmelc Incorporated</title>
+<meta name="title" content="Szmelc Incorporated" />
+<meta name="description" content="Gratis to uczciwa cena \
+Free is a fair price!" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://metatags.io/" />
+<meta property="og:title" content="Szmelc Incorporated" />
+<meta property="og:description" content="Gratis to uczciwa cena \
+Free is a fair price!" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://metatags.io/" />
+<meta property="twitter:title" content="Szmelc Incorporated" />
+<meta property="twitter:description" content="Gratis to uczciwa cena \
+Free is a fair price!" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
   </head>
 </html>
