--- a/abuseme.html
+++ b/abuseme.html
@@ -11,7 +11,7 @@ Free is a fair price!" />
 <meta property="og:title" content="Szmelc Incorporated" />
 <meta property="og:description" content="Gratis to uczciwa cena \
 Free is a fair price!" />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="og:video" content="https://i.imgur.com/pMrthfV.mp4" />
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://metatags.io/" />
