--- a/abuseme.html
+++ b/abuseme.html
@@ -18,7 +18,7 @@ Free is a fair price!" />
 <meta property="twitter:title" content="Szmelc Incorporated" />
 <meta property="twitter:description" content="Gratis to uczciwa cena \
 Free is a fair price!" />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="twitter:video" content="https://i.imgur.com/pMrthfV.mp4" />
 <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 </html>
