--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Portfolio</title>
+    <title>Error</title>
     
     <link rel="stylesheet" href="https://serainox420.github.io/styles.css">
     
@@ -33,49 +33,16 @@
         top: -130px;
         width: 100%;
       }
+      .error-message {
+        font-size: 130px; /* 20% of 150px */
+        text-align: center;
+        position: fixed;
+        top: 10px; /* Adjust as needed */
+        width: 500%;
+      }
       main {
         padding: 20px;
         margin-top: 100px;
-      }
-      img {
-        max-width: 100%;
-      }
-      footer {
-        background-color: #000;
-        color: #fff;
-        padding: 1px;
-        text-align: center;
-        font-family: Ancient;
-      }
-      .navbar {
-        background-color: #171717;
-        overflow: hidden;
-        display: flex;
-        justify-content: center;
-      }
-      .navbar a {
-        float: left;
-        display: block;
-        color: #f2f2f2;
-        text-align: center;
-        text-decoration: none;
-        font-size: 45px;
-      }
-      .navbar a:hover {
-        background-color: #ddd;
-        color: black;
-      }
-      .navbar a.active {
-        background-color: #4CAF50;
-        color: cyan;
-      }
-      .sample-text {
-        background-color: #171717;
-        color: #fff00;
-        padding: 5px;
-        font-size: 25px;
-        text-align: center;
-        display: block;
       }
     </style>
   </head>
@@ -83,48 +50,10 @@
     <div class="title">
       <p>404</p>
     </div>
-    <div class="navbar">
-      <a href="https://serainox420.github.io/main">512</a>
+    <div class="error-message">
+      <p>&copy; Error</p>
     </div>
-    <main>
-      <div class="sample-text">
-        <pe>Error.</pe>
-      </div> 
-      <div class="navbar">
-        <a href="https://longdogechallenge.com">303</a>
-      </div>
-      </div> 
-      <div class="navbar">
-        <a href="https://theuselessweb.com">80</a1>
-      </div>
-      </div> 
-      <div class="navbar">
-        <a href="seraimox420.github.io/eov">837</a>
-      </div>
-      </div> 
-      <div class="navbar">
-        <a href="https://www.youtube.com/watch?v=1vZ28SAgzKc">2137</a>
-      </div>
-      </div> 
-      <div class="navbar">
-        <a href="https://www.google.com">1337</a>
-      </div>
-      </div> 
-      <div class="navbar">
-        <a href="https://www.google.com">600</a>
-      </div>
-      </div> 
-      <div class="navbar">
-        <a href="https://www.google.com">25565</a>
-      </div>
-      </div> 
-      <div class="navbar">
-        <a href="https://www.google.com">NaN</a>
-      </div>
     </main>
-    <footer>
-      <p>&copy; Error GNU </p>
-    </footer>
     <script>
       setInterval(() => {
         const elements = document.querySelectorAll("body, footer");
@@ -141,3 +70,4 @@
     </script>
   </body>
 </html>
+
