--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Stuff and more!">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=2">
-    
+    <link rel="stylesheet" href="https://serainox420.github.io/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://serainox420.github.io/js/snowfall.js"></script>
 <script>
@@ -31,7 +31,7 @@ $(document).ready(function(){
   		text-align: center;
  		height: 256px; /* set a fixed height */
   		width: 100%; /* set a fixed width */
-        font-size: 22px;
+        font-size: 32px;
       }
       body {
         display: flex;
@@ -40,7 +40,8 @@ $(document).ready(function(){
         justify-content: center;
         background-color: #000000;
         color: #fff;
-        font-family: Arial, sans-serif;
+        font-family: Ancient;
+        font-size: 32px;
       }
       main {
         padding: 10px;
@@ -53,7 +54,7 @@ $(document).ready(function(){
         color: #fff;
         padding: 10px 10px;
         text-align: center;
-        font-weight: bold;
+        font-size: 20px;
       }
       .navbar {
         background-color: #000;
@@ -70,20 +71,20 @@ $(document).ready(function(){
         text-align: center;
         padding: 1px 1px;
         text-decoration: none;
-        font-size: 69px;
+        font-size: 169px;
       }
     </style>
   </head>
   <body>
-  <header>☩ ◢◣ ☩ ◥◤ ☩ ◢◣ ☩</header>
+  
   </body>
   <body>
     <div class="navbar">
     
-      <a href="https://serainox420.github.io/main">[ ENTER ]</a>
+      <a href="https://serainox420.github.io/main">X</a>
     </div>
     <footer>
-      <p>&copy; 2023 Szmelc Incorporated</p>
+      <p> Szmelc Incorporated &copy; 2024</p>
     </footer>
     <script>
       setInterval(() => {
