--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>[SZMELC]</title>
-    <meta name="description" content="Stuff and more!">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <!-- Primary Meta Tags -->
+    <title>[Szmelc.INC]</title>
+    <meta name="title" content="[Szmelc.INC]" />
+    <meta name="description" content="Free and Open-Source Software and more!" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://serainox420.github.io/" />
+    <meta property="og:title" content="[Szmelc.INC]" />
+    <meta property="og:description" content="Free and Open-Source Software and more!" />
+    <meta property="og:image" content="https://i.imgur.com/0YvJDes.png" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://serainox420.github.io/" />
+    <meta property="twitter:title" content="[Szmelc.INC]" />
+    <meta property="twitter:description" content="Free and Open-Source Software and more!" />
+    <meta property="twitter:image" content="https://i.imgur.com/0YvJDes.png" />
+    <!-- Meta Tags Generated with https://metatags.io -->
     <meta name="viewport" content="width=device-width, initial-scale=2">
     <link rel="stylesheet" href="https://serainox420.github.io/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
