--- a/szmelcdb/v2.html
+++ b/szmelcdb/v2.html
@@ -48,5 +48,6 @@ function search() {
     loadURL('https://www.google.com/search?q=' + encodeURIComponent(query));
 }
 </script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
