--- a/entropy.html
+++ b/entropy.html
@@ -69,7 +69,7 @@
       <p>Linux based operating system</p>
     </div>
     <div class="next-button">
-      <a href="https://serainox420.github.io/entropy-main" target="_blank" class="next-link">Learn more</a>
+      <a href="https://serainox420.github.io/entropy/main" target="_blank" class="next-link">Learn more</a>
     </div>
     <main>
       <!-- Your main content goes here -->
